--- a/americanoforum/nbproject/project.properties
+++ b/americanoforum/nbproject/project.properties
@@ -43,7 +43,7 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-main.class=
+main.class=Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
