--- a/americanoforum/nbproject/project.properties
+++ b/americanoforum/nbproject/project.properties
@@ -1,3 +1,5 @@
+application.title=americanoforum
+application.vendor=Yossi
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -18,10 +20,27 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/americanoforum.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.6.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\antlr-2.7.6.jar
+file.reference.commons-collections-3.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\commons-collections-3.1.jar
+file.reference.dom4j-1.6.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\dom4j-1.6.1.jar
+file.reference.hibernate3.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\hibernate3.jar
+file.reference.javassist-3.9.0.GA.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\javassist-3.9.0.GA.jar
+file.reference.jta-1.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\jta-1.1.jar
+file.reference.mysql-connector-java-5.1.12-bin.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\mysql-connector-java-5.1.12-bin.jar
+file.reference.slf4j-api-1.5.8.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\slf4j-api-1.5.8.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.antlr-2.7.6.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate3.jar}:\
+    ${file.reference.javassist-3.9.0.GA.jar}:\
+    ${file.reference.jta-1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.12-bin.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
