still working on it :S - now can read and write to database in example

--- a/americanoforum/nbproject/project.properties
+++ b/americanoforum/nbproject/project.properties
@@ -30,6 +30,7 @@ file.reference.javassist-3.9.0.GA.jar=C:\\Documents and Settings\\Yossi\\My Docu
 file.reference.jta-1.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\jta-1.1.jar
 file.reference.mysql-connector-java-5.1.12-bin.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\mysql-connector-java-5.1.12-bin.jar
 file.reference.slf4j-api-1.5.8.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\slf4j-api-1.5.8.jar
+file.reference.slf4j-simple-1.5.8.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\slf4j-simple-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,7 +41,8 @@ javac.classpath=\
     ${file.reference.javassist-3.9.0.GA.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.12-bin.jar}:\
-    ${file.reference.slf4j-api-1.5.8.jar}
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-simple-1.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
