--- a/americanoforum/nbproject/project.properties
+++ b/americanoforum/nbproject/project.properties
@@ -22,15 +22,15 @@ dist.jar=${dist.dir}/americanoforum.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.antlr-2.7.6.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\antlr-2.7.6.jar
-file.reference.commons-collections-3.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\commons-collections-3.1.jar
-file.reference.dom4j-1.6.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\dom4j-1.6.1.jar
-file.reference.hibernate3.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\hibernate3.jar
-file.reference.javassist-3.9.0.GA.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\javassist-3.9.0.GA.jar
-file.reference.jta-1.1.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\jta-1.1.jar
-file.reference.mysql-connector-java-5.1.12-bin.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\mysql-connector-java-5.1.12-bin.jar
-file.reference.slf4j-api-1.5.8.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\slf4j-api-1.5.8.jar
-file.reference.slf4j-simple-1.5.8.jar=C:\\Documents and Settings\\Yossi\\My Documents\\\u05e9\u05e0\u05d4 \u05d3'\\\u05e1\u05d3\u05e0\u05d0\\iteration3\\ext_jars\\slf4j-simple-1.5.8.jar
+file.reference.antlr-2.7.6.jar=dist/lib/antlr-2.7.6.jar
+file.reference.commons-collections-3.1.jar=dist/lib/commons-collections-3.1.jar
+file.reference.dom4j-1.6.1.jar=dist/lib/dom4j-1.6.1.jar
+file.reference.hibernate3.jar=dist/lib/hibernate3.jar
+file.reference.javassist-3.9.0.GA.jar=dist/lib/javassist-3.9.0.GA.jar
+file.reference.jta-1.1.jar=dist/lib/jta-1.1.jar
+file.reference.mysql-connector-java-5.1.12-bin.jar=dist/lib/mysql-connector-java-5.1.12-bin.jar
+file.reference.slf4j-api-1.5.8.jar=dist/lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-simple-1.5.8.jar=dist/lib/slf4j-simple-1.5.8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
