--- a/americanoforum/nbproject/project.properties
+++ b/americanoforum/nbproject/project.properties
@@ -24,10 +24,13 @@ endorsed.classpath=
 excludes=
 file.reference.antlr-2.7.6.jar=ext_jars/antlr-2.7.6.jar
 file.reference.commons-collections-3.1.jar=ext_jars/commons-collections-3.1.jar
+file.reference.commons-logging.jar=ext_jars/commons-logging.jar
+file.reference.compass-2.2.0.jar=ext_jars/compass-2.2.0.jar
 file.reference.dom4j-1.6.1.jar=ext_jars/dom4j-1.6.1.jar
 file.reference.hibernate3.jar=ext_jars/hibernate3.jar
 file.reference.javassist-3.9.0.GA.jar=ext_jars/javassist-3.9.0.GA.jar
 file.reference.jta-1.1.jar=ext_jars/jta-1.1.jar
+file.reference.lucene-core.jar=ext_jars/lucene-core.jar
 file.reference.mysql-connector-java-5.1.12-bin.jar=ext_jars/mysql-connector-java-5.1.12-bin.jar
 file.reference.slf4j-api-1.5.8.jar=ext_jars/slf4j-api-1.5.8.jar
 file.reference.slf4j-simple-1.5.8.jar=ext_jars/slf4j-simple-1.5.8.jar
@@ -42,7 +45,10 @@ javac.classpath=\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.12-bin.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-simple-1.5.8.jar}
+    ${file.reference.slf4j-simple-1.5.8.jar}:\
+    ${file.reference.compass-2.2.0.jar}:\
+    ${file.reference.commons-logging.jar}:\
+    ${file.reference.lucene-core.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
